tests/ui/transparent/enum_variant_multiple_fields.stderr
error: #[error(transparent)] requires exactly one field
 --> tests/ui/transparent/enum_variant_multiple_fields.rs:5:5
  |
5 | /     #[error(transparent)]
6 | |     Variant(String, String)
  | |___________________________^

error[E0601]: `main` function not found in crate `$CRATE`
 --> tests/ui/transparent/enum_variant_multiple_fields.rs:7:2
  |
7 | }
  |  ^ consider adding a `main` function to `$DIR/tests/ui/transparent/enum_variant_multiple_fields.rs`
