tests/ui/transparent/enum_variant_multiple_fields.rs
use masterror::Error;

#[derive(Debug, Error)]
enum TransparentEnumFail {
    #[error(transparent)]
    Variant(String, String)
}
